<resources>
    <string name="app_name">RTS</string>
    <string name="user">用户：</string>
    <string name="password">密码：</string>
    <string name="deviceId">把枪ID：</string>
    <string name="system_config">系统设置</string>
    <string name="login">登录</string>
    <string name="salesCalls">客服电话:18521430100 </string>

    <string name="set_wifi">1、WiFi设置</string>
    <string name="set_sound">2、声音设置</string>
    <string name="set_backlight">3、背光设置</string>
    <string name="set_inputmethod">4、输入法设置</string>
</resources>
